Bugfix/periodical refactoring and fixing 1 (#12)
* Evaluates always positives responses in MegaUtils#handleResult #3

* Add github CODEOWNERS and pull request template

* Specialize parsing of local path for different OS #13

* Add issue template

* Add support for command `version`

* Close #8 by starting MEGAcmdServer when Mega.init is called

* Closes #13: Fix tests that uses paths with whitespace